--- a/style.css
+++ b/style.css
@@ -3,56 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-:root{
-    --navtext:#3c7085;
-    --paragraphtext: #3a3841;
-    --sectiontext: #3d3f64;
-    --bordercolor: #5fb0bb;
-}
-/* header syles */
-header{
-    padding: 10px 40px;
-    background-color: rgb(46, 46, 48);
-    display: inline-block;
-    width: 100%;
-}
-header h1{
-    font-weight: bolder;
-    font-size: 36px;
-    float: left;
-    padding-top: 10px;
-    text-decoration: none;
-}
-header h1 a{
-    color: var(--paragraphtext);
-    background-color: var(--bordercolor);
-}
-header nav{
-    float: right;
-    font-size: 14px;
-}
-header nav ul li{
-    margin: 20px 30px;
-    display: inline-block;
-}
-header nav ul li a{
-    color: var(--navtext);
-}
 
-/* banner */
-.banner{
-    background: url(./assets/prism-background.jpg);
-    background-size: auto;
-    background-repeat: repeat;
-    height: 300px;
-}
-.banner p{
-    color: var(--sectiontext);
-    background-color: var(--bordercolor);
-    float: right;
-    margin: 250px 30px 20px 0 ;
-    display: inherit;
-    border-width: 3px;
-    border-style: solid;
-    border-color: yellow;
+/* header style */
+header{
+    
 }
