--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --standout: rgb(87, 134, 132);
 }
 
+
 /* header style */
 header{
     width: 100%;
@@ -35,4 +36,23 @@ nav a{
     color: var(--standout);
     font-size: 20px;
 
+}
+/* banner */
+.banner{
+    background-image: url(./assets/prism-background.jpg);
+    background-size: cover;
+    background-repeat: repeat;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    margin-top: 50px;
+    display:block;
+}
+.banner p{
+    float: right;
+    background: var(--standout);
+    margin-top: 160px;
+    margin-right: 5%;
+    color: white;
+    font-size: 20px;
 }
