--- a/style.css
+++ b/style.css
@@ -12,47 +12,25 @@
 
 /* header style */
 header{
+    display: inline-block;
     width: 100%;
-    display: inline;
-    background: var(--dark);
+    margin-top: 10px;
 }
 header h1{
     float: left;
+    background: var(--standout);
+    padding: 0 10px 0 5%;
     color: var(--dark);
-    background: var(--standout);
-    margin-top: 5px;
-    padding-left: 5%;
-    padding-right: 10px;
 }
-nav{
-    margin-right: 5%;
-}
-nav li{
-float: right;
-display: inline-block;
-margin: 10px 0 0 5%;
-}
-nav a{
-    color: var(--standout);
-    font-size: 20px;
-
-}
-/* banner */
-.banner{
-    background-image: url(./assets/prism-background.jpg);
-    background-size: cover;
-    background-repeat: repeat;
-    width: 100%;
-    height: 200px;
-    position: absolute;
-    margin-top: 50px;
-    display:block;
-}
-.banner p{
+header nav{
     float: right;
-    background: var(--standout);
-    margin-top: 160px;
     margin-right: 5%;
-    color: white;
+}
+header nav ul li{
+    display: inline;
+    margin-left: 50px;
+}
+header nav ul li a{
+    color: var(--standout);
     font-size: 20px;
 }
