--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: rgb(53, 51, 51);
+    background: lightslategray;
 }
 :root{
     --dark: rgb(65, 61, 61);
@@ -14,7 +14,9 @@
 header{
     display: inline-block;
     width: 100%;
-    margin-top: 10px;
+    background: var(--dark);
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 header h1{
     float: left;
@@ -39,12 +41,122 @@ header nav ul li a{
 .banner{
     background-image: url(./assets/prism-background.jpg);
     height: 200px;
+    background-position: center;
+    background-size: cover;
 }
-.banner p{
+.banner h2{
     float: right;
-    margin-top: 170px;
+    margin-top: 150px;
     margin-right: 5%;
-    font-size: 20px;
-    background: var(--standout);
-    color: var(--dark);
+    background-color: black;
+    color: white;
+    opacity: 50%;
+    border-radius: 14px;
+    padding: 0 10px;
 }
+
+/* set up section margins */
+.primary{
+    width: 100%;
+    margin: 40px 0 40px 50px;
+    line-height: 1.5;
+}
+/* section titles */
+.section-title{
+    float: left;
+    text-align: right;
+    display: inline;
+    font-size: 40px;
+    padding-right: 40px;
+}
+
+/* about me paragraph style */
+.left-border{
+    float: left;
+    width: auto;
+    border-left-style: solid;
+    border-left-width: 3px;
+    padding-left: 20px;    
+}
+
+.work{
+    margin-left: 75px;
+}
+
+/* format flex section */
+.flexbox-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 80%;
+    border-left: solid 3px;
+    padding-left: 20px;
+    flex-direction: column;
+}
+.flex-item{
+    width: 45%;
+    border-radius: 14px;
+    border: 4px solid #fb3e55;
+    background-color: #393b4f;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    min-height: 400px;
+    padding-left: 5%;
+    padding-top: 300px;
+    flex-direction: column;
+}
+.first-flex-item{
+    width: 90%;
+    border-radius: 14px;
+    border: 4px solid #fb3e55;
+    background-color: #393b4f;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    background-image: url('./assets/Horiseon.jpg');
+    background-size: cover;
+    background-position: center;
+    padding-top: 300px;
+    padding-left: 5%;
+    min-height: 400px;
+}
+
+.flex-span{
+    background-color: white;
+    padding: 5px 10px 5px 10px;
+    opacity: 100%;
+    border-radius: 14px;
+}
+.flex-span a{
+    text-decoration: none;
+    background-color: white;
+}
+.gobuddy{
+    background-image: url(./assets/Run-buddy-image.jpg);
+}
+
+/* contact section */
+section nav{
+    float: left;
+    margin-top: 20px;
+    border-left: solid 3px;
+    margin-left: 23px;
+}
+section nav ul li{
+    display: inline;
+    margin-left: 50px;
+}
+section nav ul li a{
+    color: var(--standout);
+    font-size: 20px;
+    text-decoration: none;
+    margin-top: 20px;
+    color: black;
+}
+.contact-title{
+    width: 10%;
+}
+
+
+/* media queries */
